# netbox_phonenum

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml
netbox_phonenum/: __init__.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_phonenum/api/: __init__.py  serializers.py  urls.py  views.py
netbox_phonenum/migrations/: 0001_initial.py  0002_number.py
netbox_phonenum/templates/netbox_phonenum/: number.html  number_list.html  pool.html  pool_list.html  pool_numbers.html
