[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["netbox_phonenum"]
package-data = {"netbox_phonenum" = ["**/*", "templates/**"]}


[tool.black]
line-length = 140

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.pylint]
max-line-length = 140

[tool.pyright]
include = ["netbox_phonenum"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 140

[project]
name = "netbox-phonenum"
version = "0.0.10"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.12',
]
keywords = ["netbox", "netbox-plugin", "phonenum", "netbox-phonenum", "voipbox"]
license = {file = "LICENSE"}


[project.urls]
Documentation = "https://github.com/jeremythorson/netbox_phonenum/blob/main/README.md"
Source = "https://github.com/jeremythorson/netbox_phonenum/"
Tracker = "https://github.com/jeremythorson/netbox_phonenum/issues"
